--- a/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
+++ b/cluster/apps/media-stack/bazarr/bazarr-deployment.yaml
@@ -37,6 +37,14 @@ spec:
           ports:
             - name: http
               containerPort: 6767
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 15
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
           volumeMounts:
             - name: config
               mountPath: /config
