--- a/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
+++ b/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
@@ -38,6 +38,14 @@ spec:
           ports:
             - name: http
               containerPort: 9696
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 15
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
           volumeMounts:
             - name: config
               mountPath: /config
