--- a/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
+++ b/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
@@ -40,7 +40,7 @@ spec:
               containerPort: 9696
           readinessProbe:
             httpGet:
-              path: /
+              path: /login
               port: http
             initialDelaySeconds: 15
             periodSeconds: 10
