feat: add subpath to all arr apps

--- a/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
+++ b/cluster/apps/media-stack/prowlarr/prowlarr-deployment.yaml
@@ -49,6 +49,7 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+              subPath: prowlarr
             - name: downloads 
               mountPath: /media
       volumes:
