--- a/cluster/apps/media-stack/radarr/radarr-deployment.yaml
+++ b/cluster/apps/media-stack/radarr/radarr-deployment.yaml
@@ -49,6 +49,7 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+              subPath: radarr
             - name: downloads
               mountPath: /media
       volumes:
