--- a/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
+++ b/cluster/apps/media-stack/lidarr/lidarr-deployment.yaml
@@ -49,6 +49,7 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+              subPath: lidarr
             - name: downloads 
               mountPath: /media
       volumes:
