feat: add subpath helm commafeed & database

--- a/cluster/apps/commafeed/helm-release-db.yaml
+++ b/cluster/apps/commafeed/helm-release-db.yaml
@@ -27,6 +27,7 @@ spec:
         enabled: true
         storageClass: "smb-dynamic"
         size: 2Gi
+        subPath: postgresql-data
       # Add initialization script for CommAFeed
       initdb:
         scripts:
