Fix storage permissions for stateful apps

--- a/cluster/apps/commafeed/helm-release-db.yaml
+++ b/cluster/apps/commafeed/helm-release-db.yaml
@@ -25,7 +25,8 @@ spec:
     primary:
       persistence:
         enabled: true
-        storageClass: "smb-dynamic"
+        storageClass: "smb-strict" 
+        subPath: "commafeed-data"        
         size: 2Gi
         subPath: postgresql-data
       # Add initialization script for CommAFeed
