--- a/cluster/base/kustomization.yaml
+++ b/cluster/base/kustomization.yaml
@@ -3,3 +3,4 @@ kind: Kustomization
 resources:
   - ./smb-csi-driver-helm-release.yaml
   - ./smb-storageclass.yaml
+  - ./smb-storageclass-strict.yaml
