--- a/cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
+++ b/cluster/apps/media-stack/qbittorrent/qbittorrent-deployment.yaml
@@ -48,7 +48,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /login
-              port: http
+              port: webui
             initialDelaySeconds: 15
             periodSeconds: 10
             timeoutSeconds: 5
