--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -14,6 +14,6 @@ resources:
   - ./homepage.yaml
 
   # Aplicaciones que dependen de otras apps (como database)
-  #- ./pgadmin.yaml
-  #- ./commafeed.yaml
+  - ./pgadmin.yaml
+  - ./commafeed.yaml
   - ./media-stack.yaml
