--- a/cluster/apps/commafeed/helm-release-db.yaml
+++ b/cluster/apps/commafeed/helm-release-db.yaml
@@ -22,7 +22,6 @@ spec:
         adminPasswordKey: "DB_PASSWORD"
         userPasswordKey: "DB_PASSWORD"
     primary:
-      # Este es el cambio clave para forzar el usuario correcto
       podSecurityContext:
         enabled: true
         fsGroup: 1001
@@ -33,7 +32,7 @@ spec:
         enabled: true
         storageClass: "smb-strict"
         size: 2Gi
-        subPath: "postgresql-data"
+        subPath: "postgresql-data" # Corregido
       initdb:
         scripts:
           init.sql: |
