--- a/cluster/apps/commafeed/deployment.yaml
+++ b/cluster/apps/commafeed/deployment.yaml
@@ -16,43 +16,21 @@ spec:
       labels:
         app: commafeed
     spec:
-      # Add init container to wait for database
+      # initContainer optimizado para solo chequear el puerto
       initContainers:
         - name: wait-for-db
-          image: postgres:15
-          command: ['sh', '-c']
-          args:
-            - |
-              until pg_isready -h commafeed-db-postgresql.media-stack.svc.cluster.local -p 5432 -U commafeed; do
-                echo "Waiting for database to be ready..."
-                sleep 2
-              done
-              echo "Database is ready!"
-          env:
-            - name: PGPASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: commafeed-creds
-                  key: DB_PASSWORD
+          image: busybox:1.36
+          command: ['sh', '-c', 'until nc -zv commafeed-db-postgresql.media-stack.svc.cluster.local 5432; do echo "Waiting for database..."; sleep 2; done']
       containers:
         - name: commafeed
           image: athou/commafeed:5.10.0-postgresql-jvm
           env:
+            # --- Variables correctas para la imagen de Quarkus ---
             - name: QUARKUS_DATASOURCE_JDBC_URL
               value: "jdbc:postgresql://commafeed-db-postgresql.media-stack.svc.cluster.local:5432/commafeed"
             - name: QUARKUS_DATASOURCE_USERNAME
-              value: "commafeed" 
+              value: "commafeed"
             - name: QUARKUS_DATASOURCE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: commafeed-creds
-                  key: DB_PASSWORD
-            # Add additional environment variables for CommAFeed
-            - name: COMMAFEED_DB_URL
-              value: "postgresql://commafeed-db-postgresql.media-stack.svc.cluster.local:5432/commafeed"
-            - name: COMMAFEED_DB_USER
-              value: "commafeed" 
-            - name: COMMAFEED_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: commafeed-creds
@@ -66,18 +44,16 @@ spec:
             limits:
               memory: "728Mi"
               cpu: "500m"
-          # Add health checks
+          # Health checks apuntando al endpoint de salud de la app
           livenessProbe:
             httpGet:
-              path: /
+              path: /q/health/live
               port: 8082
             initialDelaySeconds: 60
             periodSeconds: 30
-            timeoutSeconds: 10
           readinessProbe:
             httpGet:
-              path: /
+              path: /q/health/ready
               port: 8082
             initialDelaySeconds: 30
             periodSeconds: 10
-            timeoutSeconds: 5
