fix(adguard): add base  SMB storageclas

--- a/cluster/base/kustomization.yaml
+++ b/cluster/base/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - ./smb-csi-driver-helm-release.yaml
   - ./smb-storageclass.yaml
   - ./smb-storageclass-strict.yaml
+  - ./smb-storageclass-adguard.yaml
