fix(adguard): add base  SMB storageclas v2

--- a/cluster/apps/networking/adguard/deployment.yaml
+++ b/cluster/apps/networking/adguard/deployment.yaml
@@ -18,10 +18,7 @@ spec:
       labels:
         app: adguard-home
     spec:
-      securityContext: # <--- Mueve el bloque aquí
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
+      # The securityContext block has been removed from here.
       containers:
       - name: adguard-home
         image: adguard/adguardhome:v0.107.52
