--- a/cluster/apps/networking/adguard/deployment.yaml
+++ b/cluster/apps/networking/adguard/deployment.yaml
@@ -18,7 +18,6 @@ spec:
       labels:
         app: adguard-home
     spec:
-      # The securityContext block has been removed from here.
       containers:
       - name: adguard-home
         image: adguard/adguardhome:v0.107.52
@@ -48,18 +47,24 @@ spec:
           limits:
             memory: "512Mi"
             cpu: "500m"
+        # --- MODIFIED PROBES ---
         livenessProbe:
           httpGet:
-            path: /
+            path: /control/status
             port: 80
-          initialDelaySeconds: 30
+          initialDelaySeconds: 60 # Increased from 30
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
-            path: /
+            path: /control/status
             port: 80
-          initialDelaySeconds: 5
+          initialDelaySeconds: 30 # Increased from 5
           periodSeconds: 5
+          timeoutSeconds: 2
+          failureThreshold: 3
+        # --- END OF MODIFICATIONS ---
       volumes:
       - name: adguard-config
         persistentVolumeClaim:
