--- a/cluster/apps/database/helm-release.yaml
+++ b/cluster/apps/database/helm-release.yaml
@@ -1,4 +1,3 @@
-# cluster/apps/database/helm-release.yaml
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -18,6 +17,9 @@ spec:
     auth:
       existingSecret: "postgres-creds"
       database: "homelab"
+      secretKeys:
+        adminPasswordKey: "postgres-password"
+        userPasswordKey: "password"
     primary:
       podSecurityContext:
         enabled: true
@@ -27,5 +29,14 @@ spec:
         runAsUser: 1001
       persistence:
         enabled: true
-        storageClass: "local-path" # <-- CAMBIO CRÍTICO
+        storageClass: "smb-dynamic"  # Changed from local-path
         size: 8Gi
+      resources:
+        requests:
+          memory: "256Mi"
+          cpu: "250m"
+        limits:
+          memory: "512Mi"
+          cpu: "500m"
+    metrics:
+      enabled: false  # Disable metrics to reduce resource usage
