--- a/cluster/apps/database/helm-release.yaml
+++ b/cluster/apps/database/helm-release.yaml
@@ -29,8 +29,24 @@ spec:
         runAsUser: 1001
       persistence:
         enabled: true
-        storageClass: "smb-postgres"  # CAMBIO: usar smb-strict en lugar de smb-dynamic
+        storageClass: "smb-dynamic"
         size: 8Gi
+      # AGREGAR ESTA SECCIÓN
+      initContainers:
+        - name: fix-permissions
+          image: busybox:1.36
+          command: ['sh', '-c']
+          args:
+            - |
+              echo "Fixing permissions for PostgreSQL data directory..."
+              chown -R 1001:1001 /bitnami/postgresql/data
+              chmod -R 700 /bitnami/postgresql/data
+              echo "Permissions fixed successfully"
+          volumeMounts:
+            - name: data
+              mountPath: /bitnami/postgresql/data
+          securityContext:
+            runAsUser: 0  # Necesario para cambiar ownership
       resources:
         requests:
           memory: "256Mi"
