--- a/cluster/apps/media-stack/overseerr/kustomization.yaml
+++ b/cluster/apps/media-stack/overseerr/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - plex-pvc.yaml
-  - plex-deployment.yaml
-  - plex-networking.yaml
+  - pvc.yaml
+  - deployment.yaml
+  - networking.yaml
