--- a/cluster/apps/media-stack/overseerr/networking.yaml
+++ b/cluster/apps/media-stack/overseerr/networking.yaml
@@ -1,29 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jellyfin
+  name: overseerr
   namespace: media-stack
 spec:
   selector:
-    app: jellyfin
-  type: LoadBalancer
-  loadBalancerIP: 192.168.1.51
+    app: overseerr
   ports:
     - name: http
-      port: 8096
-      targetPort: 8096
+      port: 5055
+      targetPort: 5055
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: jellyfin
+  name: overseerr
   namespace: media-stack
 spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`jellyfin.homelab.local`) # Dominio para Jellyfin
+    - match: Host(`requests.homelab.local`)
       kind: Rule
       services:
-        - name: jellyfin
-          port: 8096
+        - name: overseerr
+          port: 5055
