--- a/cluster/apps/media-stack/overseerr/pvc.yaml
+++ b/cluster/apps/media-stack/overseerr/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: plex-config
+  name: overseerr-config
   namespace: media-stack
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: smb-dynamic
   resources:
     requests:
-      storage: 5Gi
+      storage: 1Gi
