feat(tailscale): Add tailscale application and enable via kustomization

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./database.yaml
   - ./monitoring.yaml
   - ./homepage.yaml
+  - ./tailscale.yaml
 
   # Aplicaciones que dependen de otras apps (como database)
   - ./pgadmin.yaml
