--- a/cluster/apps/tailscale.yaml
+++ b/cluster/apps/tailscale.yaml
@@ -1,4 +1,3 @@
-# cluster/apps/tailscale.yaml
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -6,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./cluster/apps/tailscale # <- Apunta a la carpeta de nuestra app
+  path: ./cluster/apps/tailscale 
   prune: true
   sourceRef:
     kind: GitRepository
