fix(commafeed): Disable health probes for debugging

--- a/cluster/apps/commafeed/deployment.yaml
+++ b/cluster/apps/commafeed/deployment.yaml
@@ -41,15 +41,15 @@ spec:
             limits:
               memory: "728Mi"
               cpu: "500m"
-          livenessProbe:
-            httpGet:
-              path: /q/health/live
-              port: 8082
-            initialDelaySeconds: 60
-            periodSeconds: 30
-          readinessProbe:
-            httpGet:
-              path: /q/health/ready
-              port: 8082
-            initialDelaySeconds: 30
-            periodSeconds: 10
+#          livenessProbe:
+#            httpGet:
+#              path: /q/health/live
+#              port: 8082
+#            initialDelaySeconds: 60
+#            periodSeconds: 30
+#          readinessProbe:
+#            httpGet:
+#              path: /q/health/ready
+#              port: 8082
+#            initialDelaySeconds: 30
+#            periodSeconds: 10
