fix(wallabag): Add initContainer to fix volume permissions

--- a/cluster/apps/wallabag/deployment.yaml
+++ b/cluster/apps/wallabag/deployment.yaml
@@ -15,10 +15,15 @@ spec:
       labels:
         app: wallabag
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
+      initContainers:
+        - name: fix-permissions
+          image: busybox:latest
+          command: ["sh", "-c", "chown -R 1000:1000 /var/www/wallabag/var /var/www/wallabag/web/assets/images"]
+          volumeMounts:
+            - name: data
+              mountPath: /var/www/wallabag/var
+            - name: images
+              mountPath: /var/www/wallabag/web/assets/images
       containers:
         - name: wallabag
           image: ghcr.io/wallabag/docker:2.6.10
