--- a/cluster/apps/wallabag/pvc.yaml
+++ b/cluster/apps/wallabag/pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: smb-dynamic
   resources:
     requests:
       storage: 5Gi
@@ -19,7 +19,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: smb-dynamic
   resources:
     requests:
       storage: 10Gi
