--- a/cluster/apps/wallabag/deployment.yaml
+++ b/cluster/apps/wallabag/deployment.yaml
@@ -19,6 +19,17 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
+      # --- START: Added initContainer to fix permissions ---
+      initContainers:
+        - name: set-permissions
+          image: busybox:1.36
+          command: ["sh", "-c", "chown -R 1000:1000 /data && chown -R 1000:1000 /images"]
+          volumeMounts:
+            - name: data
+              mountPath: /data
+            - name: images
+              mountPath: /images
+      # --- END: Added initContainer ---
       containers:
         - name: wallabag
           image: ghcr.io/wallabag/docker:2.6.10
@@ -65,4 +76,4 @@ spec:
             claimName: wallabag-data
         - name: images
           persistentVolumeClaim:
-            claimName: wallabag-images 
+            claimName: wallabag-images
