--- a/cluster/apps/wallabag/deployment.yaml
+++ b/cluster/apps/wallabag/deployment.yaml
@@ -19,23 +19,18 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
-      # --- START: Added initContainer to fix permissions ---
-      initContainers:
-        - name: set-permissions
-          image: busybox:1.36
-          command: ["sh", "-c", "chown -R 1000:1000 /data && chown -R 1000:1000 /images"]
-          volumeMounts:
-            - name: data
-              mountPath: /data
-            - name: images
-              mountPath: /images
-      # --- END: Added initContainer ---
       containers:
         - name: wallabag
           image: ghcr.io/wallabag/docker:2.6.10
           ports:
             - containerPort: 80
           env:
+            # --- INICIO DE LA SOLUCIÓN CORRECTA ---
+            - name: PUID
+              value: "1000"
+            - name: PGID
+              value: "1000"
+            # --- FIN DE LA SOLUCIÓN CORRECTA ---
             - name: SYMFONY__ENV__DATABASE_DRIVER
               value: "pdo_pgsql"
             - name: SYMFONY__ENV__DATABASE_HOST
